# gen_rv64asm

./: CONTRIBUTING.md  Dockerfile  README.md  _config.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: gen_rv64asm_bug_report.md  gen_rv64asm_feature_request.md
.github/workflows/: gen_rv64asm_package_checker.yml  gen_rv64asm_python3_build.yml  gen_rv64asm_python_checker.yml  gen_rv64asm_toc.yml
docs/source/: conf.py  gen_rv64asm.rst  index.rst
gen_rv64asm/: __init__.py  gen_rv64asm
gen_rv64asm/conf/: gen_rv64asm.cfg  gen_rv64asm.logo  project.yaml
gen_rv64asm/conf/template/: Makefile.template  asmflags.template  ldflags.template  main.template  objects.template  sources.template
gen_rv64asm/pro/: __init__.py  read_template.py  write_template.py
gen_rv64asm/run/: gen_rv64asm_run.py
tests/: .coverage  gen_rv64asm  gen_rv64asm_coverage.json  gen_rv64asm_coverage.xml  gen_rv64asm_pro_test.py  gen_rv64asm_test.py  read_template_test.py  run_coverage.sh  write_template_test.py
tests/full_simple/: main.s
tests/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_f49af675d1ea529e___init___py.html  z_f49af675d1ea529e_read_template_py.html  z_f49af675d1ea529e_write_template_py.html  z_f6f99df69c378dd1___init___py.html
tests/latest/: main.s
tests/new_simple_test/: main.s
